# OpenEQ

./: .gitignore  .gitmodules  CMakeLists.txt
source/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  main.cpp  main_component.h
